<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ProgressBar
            android:id="@+id/pBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/countET"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toStartOf="@+id/listBT"
            android:hint="@string/number_of_items"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHint="#8D8D8D" />

        <Button
            android:id="@+id/listBT"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_marginEnd="8dp"
            android:layout_alignParentEnd="true"
            android:text="@string/retrieve"
            android:textColor="@color/white" />

        <LinearLayout
            android:id="@+id/mainLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/countET"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            android:layout_marginEnd="8dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/makeTV"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/border_background_stroke"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/make_model"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/dateTV"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:background="@drawable/border_background_stroke"
                android:text="@string/vin"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listRV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/mainLL"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp" />

    </RelativeLayout>
</layout>